TestWebServer refactors and cleanups.
Use Integer.valueOf instead of new Integer (fix findbugs downstream).
Moved redirect below null check and add updating count and last request
variables.

BUG=


Review URL: https://chromiumcodereview.appspot.com/11094035

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@161171 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: cb1cfc35cf1e530025f036b9fe5c9a3b610d6fac